# MRM_Aahir

./: Task_1.md  Task_3.md  Task_4_5.md  detect_aruco.py
cashier_system/: CMakeLists.txt  package.xml
cashier_system/launch/: cashier.launch.py
cashier_system/msg/: Bill.msg
cashier_system/src/: bill_generator.cpp  inventory_manager.cpp  status_viewer.cpp
cashier_system/srv/: GetStatus.srv
gp_ws/src/global_planner/: CMakeLists.txt  README.md  package.xml
gp_ws/src/global_planner/launch/: global_planner.launch.py  planner_only.launch.py
gp_ws/src/global_planner/rviz/: global_planner.rviz
gp_ws/src/global_planner/src/: goal_publisher_node.cpp  gps_nav_node.cpp
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/rover_bot/share/rover_bot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/rover_bot/share/rover_bot/urdf/launch/: gazebo.launch.py
ros2_ws/log/: latest_build
ros2_ws/src/rover_bot/: CMakeLists.txt
ros2_ws/src/rover_bot/urdf/: rover.xacro
